# ContractGraph

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/commands/: pr.md  sync.md
data/: 知识图谱-合同数据源分析.xlsx
data/enhanced_graph_data/: README.md  edges_admin_penalty_company.csv  edges_business_abnormal_company.csv  edges_case_contract.csv  edges_case_person.csv  edges_company_legal_event.csv  edges_company_transaction.csv  edges_controls.csv  edges_dispute_contract.csv  edges_employment.csv  edges_is_customer.csv  edges_is_supplier.csv  edges_legal_person.csv  edges_party.csv  edges_trades_with.csv  nodes_admin_penalty.csv  nodes_business_abnormal.csv  nodes_company.csv  nodes_contract.csv  nodes_legal_event.csv  nodes_person.csv  nodes_transaction.csv  修改说明.txt
data/enhanced_mock_data/: t_bd_customer_虚拟数据.csv  t_bd_supplier_虚拟数据.csv  t_conl_case_虚拟数据.csv  t_conl_disputeregist_虚拟数据.csv  t_mscon_contract_虚拟数据.csv  t_mscon_performplanin_虚拟数据.csv  t_mscon_performplanout_虚拟数据.csv  t_mscon_type_虚拟数据.csv  t_org_org_虚拟数据.csv  t_sec_user_虚拟数据.csv  (+2 more)
docs/: 02_字段筛选说明.md  03_知识图谱设计.md  API文档.md  DATA_FLOW_DIAGRAM.md  WebDemo使用说明.md  analysis_scenarios.md  api_doc.md  data_flow.md  graph_schema.md  graph_schema_visual.html  risk_analysis_implementation.md  scenarios_mapping.md  原型系统说明文档.md  场景数据支持分析报告.md  数据源迁移说明.md  知识图谱高级分析场景实施方案.md  高级分析场景使用说明.md
src/: nebula_import.py  settings.py  web_demo.py
tests/: test_circular_trade_detection.py  test_collusion_api.py  test_connection.py  test_external_risk_rank_api.py  test_fraud_rank_api.py  test_legal_event_monitoring.py
(+68 files in other folders)
