[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
